Added button text to toolbar

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -53,7 +53,7 @@ about.dialog.yoursystem.title=Ihr System
 about.dialog_about_tab=über
 about.dialog_contributers_tab=team
 about.key=h
-about.name=Help
+about.name=Hilfe
 
 addfriend.description=F\u00FCgt einen Nutzer zur Freundesliste hinzu
 addfriend.key=f
@@ -129,7 +129,7 @@ directorypanel.dropfile_duplicate_dialog.title=Datei bereits vorhanden
 
 disablesilentmode.description=Ruhemodus derzeitig aktiv. Hinzugef\u00FCgte/ver\u00E4nderte Dateien werden nicht erkannt. Bitte anklicken, um wieder in den aktiven Modus zu wechseln.
 disablesilentmode.key=w
-disablesilentmode.name=Aktivmodus
+disablesilentmode.name=Zum Aktivmodus
 
 donotdownloadfile.description=Unterbindet das automatische Herunterladen dieser Datei
 donotdownloadfile.key=D
@@ -150,7 +150,7 @@ empty_recycle_bin_confimation.title=PowerFolder Papierkorb leeren
 
 enablesilentmode.description=Deaktiviert alle aufwendigen Aufgaben, z.B. die Suche nach \u00C4nderungen in den Foldern.
 enablesilentmode.key=s
-enablesilentmode.name=Ruhemodus
+enablesilentmode.name=Zum Ruhemodus
 
 filecopier.progressdialog.text=Kopiere Dateien...
 filecopier.progressdialog.title=Kopiervorgang aktiv
@@ -211,7 +211,7 @@ foldercreate.error.already_taken=Verzeichnis von '{0}' schon verwendet\n'{1}'
 ##foldercreate.error.unable_to_create=Unable to create directory '{0}'
 ##foldercreate.error.unable_to_open=Unable to open local directory '{0}'. Seems to be a file \!
 foldercreate.key=s
-foldercreate.name=Folder er\u00F6ffnen
+foldercreate.name=Neuen Folder
 foldercreate.nameempty.text=Bitte einen Speicherort angeben\!
 foldercreate.nameempty.title=Es wird ein Name f\u00FCr den neuen Folder ben\u00F6tigt.
 foldercreate.success=Folder {0} erstellt, lokale Kopie in '{1}'
