--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -106,8 +106,10 @@ dialog.connect.connecting=Conectando
 dialog.connect.connecting_to=Conectando a {0}...
 dialog.connection_problem=Problema de conexi\u00F3n
 dialog.synchronization.choose=Por favor, elija su acci\u00F3n en
+##dialog.synchronization.receive_changes=Receive changes
 dialog.synchronization.send_and_receive_changes=Enviar y recibir cambios
 dialog.synchronization.send_own_changes=Enviar los cambios propios
+##dialog.synchronization.sychronizing=Synchronizing...
 dialog.synchronization.title=Sincronizar proyecto
 dialog.unable_to_connect_to_address=No se puede conectar a {0}
 dialog.unable_to_connect_to_member=No se puede conectar a {0}
@@ -190,6 +192,10 @@ filelist.recursive=recursivo
 ##filelist.status.no_files_available_add_files_in_folder=No files available... Add files in you local folder to share them
 ##filelist.status.no_files_available_yet_fetching_filelist=No files available yet... fetching filelist
 
+##findfriends.description=Start searching for new friends
+##findfriends.key=F
+##findfriends.name=Find new Friends
+
 ##folder.check_path_length.never_show_again=Do not ask this again
 ##folder.check_path_length.text=The combined length of the path to the file and the filename is more than 255 characters.\nThis is not recommended since this may not work on other Operating systems like Windows 2000.\n\nFolder\: {0}\nFile\: {1}
 ##folder.check_path_length.title=Path maybe to long
@@ -214,6 +220,7 @@ foldercreate.key=s
 foldercreate.name=Compartir una carpeta
 foldercreate.nameempty.text=El nombre de la carpeta no puede estar vac\u00EDo
 foldercreate.nameempty.title=Nombre de carpeta obligatorio
+##foldercreate.progress.text=Creating Folder '{0}'
 foldercreate.success=Carpeta {0} compartida, la copia local en '{1}'
 
 folderexception.dialog.text=No se puede unir a la carpeta '{0}'.\nCausa\: {1}
@@ -256,6 +263,7 @@ folderleave.name=Abandonar carpeta
 ##folderpanel.hometab.number_of_local_files_in_folder=Number of local files in folder
 ##folderpanel.hometab.public_folder=Public
 ##folderpanel.hometab.secret_folder=Secret
+##folderpanel.hometab.synchronisation_eta=Synchronisation ETA
 ##folderpanel.hometab.synchronisation_percentage=Synchronisation percentage
 ##folderpanel.hometab.title=Home
 ##folderpanel.hometab.total_number_of_files=Total number of files (local+deleted+available)
@@ -273,6 +281,7 @@ friendsearch.nodetable.last_seen_online=\u00DAltima vez en l\u00EDnea
 friendsearch.nodetable.name=Nombre
 friendsearch.nodetable.on_local_network=En LAN
 
+##friendspanel.connected=Connected
 ##friendspanel.currently_online=Currently online
 friendspanel.n_a=n/d
 friendspanel.search_for_user=Buscar usuario
@@ -293,6 +302,7 @@ general.folder=Carpeta
 general.folder.public=P\u00FAblico (visible para todos)
 general.folder.secret=Privado (requiere invitaci\u00F3n)
 general.foldername=Nombre
+##general.friendlist=Friendlist
 ##general.from=from
 general.hide=ocultar
 general.inet=i-net
@@ -443,10 +453,22 @@ openfile.description=Abrir (Ajecutar) el archivo seleccionado
 openfile.key=O
 openfile.name=Abrir archivo
 
+##plugin_disable.description=Disable (and stop) Plugin
+##plugin_disable.key=D
+##plugin_disable.name=Disable
+
+##plugin_enable.description=Enable (and start) Plugin
+##plugin_enable.key=E
+##plugin_enable.name=Enable
+
+##pluginsettings.description=Open the settings for this plugin
+##pluginsettings.key=S
+##pluginsettings.name=Settings
+
 preferences.description=Abrir los ajustes de la aplicaci\u00F3n
 ##preferences.dialog.advPort=Port
 ##preferences.dialog.advPort.tooltip=Enter a ","-separated list of ports PowerFolder should listen for connections
-##preferences.dialog.advancedSettingsTabbedPane=Advanced Settings
+##preferences.dialog.advanced.title=Advanced
 preferences.dialog.autostartleechfiles=Comenzar autom\u00E1ticamente el P2P externo
 preferences.dialog.basedir=Directorio base para las carpetas
 preferences.dialog.basedir.title=Elija el direcctorio base
@@ -456,11 +478,16 @@ preferences.dialog.basedir.title=Elija el direcctorio base
 ##preferences.dialog.bindDescr=Interface description
 preferences.dialog.colortheme=Color del tema
 preferences.dialog.createdesktopshortcuts=Crear acceso directo en el Escritorio
+##preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to friends if a node becomes a member of a folder
+##preferences.dialog.dialogs.title=Dialogs
+##preferences.dialog.dialogs.warnoncloseifnotinsync=Warn on close of program if a folder is still synchronizing
+##preferences.dialog.dialogs.warnonlimitedconnectivity=Warn on limited connectivity (No incomming connections)
+##preferences.dialog.dialogs.warnonpossiblefilenameproblems=Warn on possible filename problems (e.g. too long for Apple classic)
 preferences.dialog.dyndns=mi DNS (din\u00E1mica)
 preferences.dialog.dyndns.link=http\://www.dyndns.org/services/dns/dyndns
+##preferences.dialog.dyndns.title=DynDNS
 ##preferences.dialog.dyndnsCurrentIP=Current IP
 ##preferences.dialog.dyndnsHostname=Hostname
-##preferences.dialog.dyndnsInfoTabbedPane=DynDns Info
 ##preferences.dialog.dyndnsLoginPanel=Login
 ##preferences.dialog.dyndnsPassword=Password
 ##preferences.dialog.dyndnsSettingsTabbedPane=DynDns Settings
@@ -472,24 +499,45 @@ preferences.dialog.dyndns.link=http\://www.dyndns.org/services/dns/dyndns
 ##preferences.dialog.dyndnsUpdateWarning=DynDns service returned a warning\: 
 ##preferences.dialog.dyndnsUpdatedIP=Updated DynDns IP
 ##preferences.dialog.dyndnsUserName=Username
+##preferences.dialog.dyndnsmanager.nomatch.text=The entered DynDns does not match to this host.\nAre you sure you want to continue with it?
+##preferences.dialog.dyndnsmanager.nomatch.title=The entered DynDns does not match to this host. 
 ##preferences.dialog.errorExpandButton=>>
 ##preferences.dialog.errorShrinkButton=<<
-##preferences.dialog.generalTabbedPane=General Settings
+##preferences.dialog.general.title=General
 preferences.dialog.language=Idioma
 ##preferences.dialog.lanlinesettings=LAN Connection speed
-##preferences.dialog.linesettings=Inet Connection speed
+##preferences.dialog.linesettings=Internet Connection speed
+##preferences.dialog.network.title=Network
+##preferences.dialog.networkmode.lanonly=LAN only
+##preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
+##preferences.dialog.networkmode.private=Private Networking   
+##preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Disables public folder sharing. Restricts connectivity to interesting users only.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to some other users so so the finding of your friends in the network is posible.</BODY></HTML>
+##preferences.dialog.networkmode.public=Public Networking
+##preferences.dialog.networkmode.public.tooltip=<HTML><BODY>Enables public Folder sharing.<BR>Private folders will always require an Invitation, regardless of the networking mode.</BODY></HTML>
 preferences.dialog.nickname=Apodo
 preferences.dialog.nonwindowsinfo=Atenci\u00F3n\: Algunas opciones solo est\u00E1n disponibles en sistemas Windows
-preferences.dialog.privatenetworking=Red privada
-preferences.dialog.privatenetworking.tooltip=Restringe la conecci\u00F3n s\u00F3lo a usuarios de su inter\u00E9s.\nActualmente solo se conecta a amigos, usuarios en una red local y usuarios que esten en las carpetas a las que se ha unido
+##preferences.dialog.plugin.classname=Java classname
+##preferences.dialog.plugin.description=Description
+##preferences.dialog.plugin.name=Name
+##preferences.dialog.plugin.status=Status
+##preferences.dialog.plugin.status_disabled=Disabled
+##preferences.dialog.plugin.status_enabled=Enabled
+##preferences.dialog.plugin.title=Plugin
 preferences.dialog.restarttext=Algunos cambios necesitan reiniciar PowerFolder.\n\u00BFQuiere reiniciar ahora?\n 
 preferences.dialog.restarttitle=Solicitar reinicio
+##preferences.dialog.showadvanged=Show Advanged Preferences
+##preferences.dialog.showpreviewpanel=Enable internal image preview
+##preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My Folders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
+##preferences.dialog.silentthrottle=Silentmode bandwidth throttle 
+##preferences.dialog.silentthrottle.tooltip=Set the bandwidth usage throttle in silent mode (only works for limits other than 0)
 preferences.dialog.statusCantResolve=DynDns {0}\: \u00A1No se pudo averiguar\!
 preferences.dialog.statusDynDnsSuccess=\u00A1Se valid\u00F3 con \u00E9xito la DynDns {0} \!
 preferences.dialog.statusValidFailed=DynDns {0}\: \u00A1Fall\u00F3 la validaci\u00F3n\!
 preferences.dialog.statusWaitDynDns=Please wait, \u00A1Se est\u00E1 validando la DynDns {0} \!
 preferences.dialog.title=Preferencias
 ##preferences.dialog.titleProcessing=processing...
+##preferences.dialog.useziponlan=Use ZIP Compression on LAN 
+##preferences.dialog.useziponlan.tooltip=Enable if files to transfer are easy to compress (this may effect your CPU load)
 ##preferences.dialog.warnningMessage=Warning
 preferences.dialog.xbehavior=Acci\u00F3n al cerrar
 preferences.dialog.xbehavior.exit=Salir del programa
@@ -581,7 +629,7 @@ searchfriends.name=Buscar
 
 ##sendinvitation.ask_emailaddres.message=Email address to send invitation to
 ##sendinvitation.ask_emailaddres.title=Email address
-##sendinvitation.body=Hello {0},<br><br>{1} invites you to the PowerFolder '{2}'<br>With this invitation you get access to the files contained.<br><br>Guide\:<br>1) To access the files you need to download and install the free software <b>PowerFolder</b> from <b><a href\="http\://www.powerfolder.com">http\://www.powerfolder.com</a></b>.<br><br>2) After you installed <b>PowerFolder</b> just double-click the invitation file attached.<br><br>More Documentation\:<br><a href\="http\://docs.powerfolder.com">http\://docs.powerfolder.com</a><br><br>Best regards,<br>{1}
+##sendinvitation.body=Hello {0},<br><br>{1} invites you to the PowerFolder '{2}'<br>This invitation is used to access a private folder hosted by {1}.<br><br>1) To access the files you first need to download and install the free<br>software PowerFolder from<br>http\://www.powerfolder.com.<br><br>2) After you have installed PowerFolder double-click the invitation<br>file attached to this email.<br><br>For more information or help installing or using PowerFolder please<br>visit our Documentation Resources at http\://docs.powerfolder.com<br><br>Thank You,<br>The PowerFolder Development Team<br>PowerFolder, Professional Folder Sharing<br>
 sendinvitation.description=Invita un usuario a una carpeta
 ##sendinvitation.email=To email...
 ##sendinvitation.example_emailaddress=email@domain.com
@@ -642,6 +690,7 @@ systray.show=Mostrar
 ##systray.tooltip.syncing=Syncing
 ##systray.tooltip.up=UP {0} KBs
 
+##title.friends=Friends
 title.my.folders=Mis carpetas 
 ##title.network.statistics=Network Statistics
 title.public.folder=Carpeta p\u00FAblica
@@ -669,6 +718,7 @@ transfers.to=Para
 ##webservice_request_folder_leave.name=Quit WebStore
 
 ##wizard.basicsetup.enternick=Please enter your nickname
+##wizard.basicsetup.lanonly=LAN only
 ##wizard.basicsetup.networking=Networking Mode
 ##wizard.basicsetup.private=Private/Closed Group
 ##wizard.basicsetup.public=Public Networking
