--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -106,8 +106,10 @@ dialog.connect.connecting=Verbinden
 dialog.connect.connecting_to=Verbinden met {0}...
 dialog.connection_problem=Verbindings probleem
 dialog.synchronization.choose=Kies uw sync actie op
+##dialog.synchronization.receive_changes=Receive changes
 dialog.synchronization.send_and_receive_changes=Verzend en ontvang veranderingen
 dialog.synchronization.send_own_changes=Verzend eigen veranderingen
+##dialog.synchronization.sychronizing=Synchronizing...
 dialog.synchronization.title=Project synchronizatie
 dialog.unable_to_connect_to_address=Kan niet verbinden met {0}
 dialog.unable_to_connect_to_member=Kan niet verbinden met {0}
@@ -190,6 +192,10 @@ filelist.status.no_files_available_add_files_and_invite=Geen bestanden beschikba
 filelist.status.no_files_available_add_files_in_folder=Geen bestanden beschikbaar... Voeg bestanden toe aan uw lokale map om ze te delen of te synchronizeren
 filelist.status.no_files_available_yet_fetching_filelist=Nog geen bestanden beschikbaar... bezig bestanden lijsten op te halen
 
+##findfriends.description=Start searching for new friends
+##findfriends.key=F
+##findfriends.name=Find new Friends
+
 folder.check_path_length.never_show_again=Nooit meer tonen
 folder.check_path_length.text=De gezamelijke lengte van het pad naar het bestand en de bestandnaam is meer dan 255 karakters.\nDit is niet aanteraden omdat dit mogelijk niet werkt op ander Besturings Systemen als Windows 2000.\n\nFolder\: {0}\nBestand\: {1}
 folder.check_path_length.title=Pad mogelijk te lang
@@ -214,6 +220,7 @@ foldercreate.key=s
 foldercreate.name=Deel folder
 foldercreate.nameempty.text=De naam van de folder moet ingevuld worden
 foldercreate.nameempty.title=Foldernaam is verplicht
+##foldercreate.progress.text=Creating Folder '{0}'
 foldercreate.success=Folder {0} gedeeld, lokale kopie '{1}'
 
 folderexception.dialog.text=Niet mogelijk om lid te worden van folder '{0}'.\nReden\: {1}
@@ -256,6 +263,7 @@ folderpanel.hometab.number_of_deleted_files_in_folder=Aantal verwijderde bestand
 folderpanel.hometab.number_of_local_files_in_folder=Aantal lokale bestanden in Folder
 folderpanel.hometab.public_folder=Publiek
 folderpanel.hometab.secret_folder=Geheim
+##folderpanel.hometab.synchronisation_eta=Synchronisation ETA
 folderpanel.hometab.synchronisation_percentage=Synchronizatie percentage
 folderpanel.hometab.title=Start
 folderpanel.hometab.total_number_of_files=Totaal aantal bestanden (lokaal+verwijderd+beschikbaar)
@@ -273,6 +281,7 @@ friendsearch.nodetable.last_seen_online=Laatste keer online
 friendsearch.nodetable.name=Naam
 friendsearch.nodetable.on_local_network=Lokaal
 
+##friendspanel.connected=Connected
 friendspanel.currently_online=Nu verbonden
 friendspanel.n_a=n/b
 friendspanel.search_for_user=Zoek gebruiker
@@ -293,6 +302,7 @@ general.folder=Folder
 general.folder.public=Publiek (toegangkelijk voor iedereen)
 general.folder.secret=Prive (vereist invitatie)
 general.foldername=Naam
+##general.friendlist=Friendlist
 general.from=van
 general.hide=verberg
 general.inet=i-net
@@ -443,10 +453,22 @@ openfile.description=Open (Start) geseleteerd bestand
 openfile.key=O
 openfile.name=Open bestand
 
+##plugin_disable.description=Disable (and stop) Plugin
+##plugin_disable.key=D
+##plugin_disable.name=Disable
+
+##plugin_enable.description=Enable (and start) Plugin
+##plugin_enable.key=E
+##plugin_enable.name=Enable
+
+##pluginsettings.description=Open the settings for this plugin
+##pluginsettings.key=S
+##pluginsettings.name=Settings
+
 preferences.description=Opent de instellingen
 preferences.dialog.advPort=Poort
 preferences.dialog.advPort.tooltip=Geef een komma (",") -gescheiden lijst van poorten waarop PowerFolder moet luisteren voor inkomende verbindingen
-preferences.dialog.advancedSettingsTabbedPane=Geavanceerde Instellingen
+##preferences.dialog.advanced.title=Advanced
 preferences.dialog.autostartleechfiles=Automatich start ander P2P prog.
 preferences.dialog.basedir=Basis map voor folders
 preferences.dialog.basedir.title=Kies de basis folder lokatie
@@ -456,11 +478,16 @@ preferences.dialog.bind.tooltip=Selecteer het adres welke PowerFolder moet gebru
 preferences.dialog.bindDescr=Interface beschrijving
 preferences.dialog.colortheme=Kleur thema
 preferences.dialog.createdesktopshortcuts=Maak bureaublad snelkoppelingen
+##preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to friends if a node becomes a member of a folder
+##preferences.dialog.dialogs.title=Dialogs
+##preferences.dialog.dialogs.warnoncloseifnotinsync=Warn on close of program if a folder is still synchronizing
+##preferences.dialog.dialogs.warnonlimitedconnectivity=Warn on limited connectivity (No incomming connections)
+##preferences.dialog.dialogs.warnonpossiblefilenameproblems=Warn on possible filename problems (e.g. too long for Apple classic)
 preferences.dialog.dyndns=Mijn - dynamic - DNS
 preferences.dialog.dyndns.link=http\://www.dyndns.org/services/dns/dyndns
+##preferences.dialog.dyndns.title=DynDNS
 preferences.dialog.dyndnsCurrentIP=Huidig IP
 preferences.dialog.dyndnsHostname=Hostname
-preferences.dialog.dyndnsInfoTabbedPane=DynDns Info
 preferences.dialog.dyndnsLoginPanel=Login
 preferences.dialog.dyndnsPassword=Wachtwoord
 preferences.dialog.dyndnsSettingsTabbedPane=DynDns Instellingen
@@ -472,24 +499,45 @@ preferences.dialog.dyndnsUpdateUnknowError=Bijwerk resultaat\: Onbekende fout\!
 preferences.dialog.dyndnsUpdateWarning=Waarschuwing\!  Bijwerk resultaat
 preferences.dialog.dyndnsUpdatedIP=Updated DynDns IP
 preferences.dialog.dyndnsUserName=Gebruikersnaam
+##preferences.dialog.dyndnsmanager.nomatch.text=The entered DynDns does not match to this host.\nAre you sure you want to continue with it?
+##preferences.dialog.dyndnsmanager.nomatch.title=The entered DynDns does not match to this host. 
 preferences.dialog.errorExpandButton=>>
 preferences.dialog.errorShrinkButton=<<
-preferences.dialog.generalTabbedPane=Algemene Instellingen
+##preferences.dialog.general.title=General
 preferences.dialog.language=Taal
 preferences.dialog.lanlinesettings=LAN verbindings snelheid
 preferences.dialog.linesettings=Internet verbindings snelheid
+##preferences.dialog.network.title=Network
+##preferences.dialog.networkmode.lanonly=LAN only
+##preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
+##preferences.dialog.networkmode.private=Private Networking   
+##preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Disables public folder sharing. Restricts connectivity to interesting users only.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to some other users so so the finding of your friends in the network is posible.</BODY></HTML>
+##preferences.dialog.networkmode.public=Public Networking
+##preferences.dialog.networkmode.public.tooltip=<HTML><BODY>Enables public Folder sharing.<BR>Private folders will always require an Invitation, regardless of the networking mode.</BODY></HTML>
 preferences.dialog.nickname=Naam
 preferences.dialog.nonwindowsinfo=Attentie, sommige instellingen zijn alleen beschikbaar op windows computers
-preferences.dialog.privatenetworking=Prive netwerk
-preferences.dialog.privatenetworking.tooltip=Limiteerd verbindingen tot interesante gebruikers.\nVerbind alleen met vrienden, gebruikts op het lokale netwerk een gebruikers deelnemend aan folders
+##preferences.dialog.plugin.classname=Java classname
+##preferences.dialog.plugin.description=Description
+##preferences.dialog.plugin.name=Name
+##preferences.dialog.plugin.status=Status
+##preferences.dialog.plugin.status_disabled=Disabled
+##preferences.dialog.plugin.status_enabled=Enabled
+##preferences.dialog.plugin.title=Plugin
 preferences.dialog.restarttext=Door veranderingen in de instellingen is het nootzakelijk dat PowerFolder opnieuw opstart.\nWilt u PowerFolder nu opnieuw opstarten?\n 
 preferences.dialog.restarttitle=Opnieuw opstarten 
+##preferences.dialog.showadvanged=Show Advanged Preferences
+##preferences.dialog.showpreviewpanel=Enable internal image preview
+##preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My Folders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
+##preferences.dialog.silentthrottle=Silentmode bandwidth throttle 
+##preferences.dialog.silentthrottle.tooltip=Set the bandwidth usage throttle in silent mode (only works for limits other than 0)
 preferences.dialog.statusCantResolve=DynDns {0}\: kan niet worden gevonden\!
 preferences.dialog.statusDynDnsSuccess=DynDns {0} controle gelukt\!
 preferences.dialog.statusValidFailed=DynDns {0}\: controle mislukt\!
 preferences.dialog.statusWaitDynDns=S.V.P. even wachten, DynDns {0} wordt gecontroleerd\!
 preferences.dialog.title=Instellingen
 preferences.dialog.titleProcessing=verwerken...
+##preferences.dialog.useziponlan=Use ZIP Compression on LAN 
+##preferences.dialog.useziponlan.tooltip=Enable if files to transfer are easy to compress (this may effect your CPU load)
 preferences.dialog.warnningMessage=Waarschuwing
 preferences.dialog.xbehavior=Sluit gedrag
 preferences.dialog.xbehavior.exit=Programma afsluiten
@@ -642,6 +690,7 @@ systray.tooltip.insync=InSync
 systray.tooltip.syncing=Syncing
 systray.tooltip.up=UP {0} KBs
 
+##title.friends=Friends
 title.my.folders=Mijn Folders 
 title.network.statistics=Netwerk Statistieken
 title.public.folder=Publieke Folder
@@ -669,6 +718,7 @@ webservice_request_folder_leave.key=s
 webservice_request_folder_leave.name=Stop WebStore
 
 wizard.basicsetup.enternick=Voer gebruikersnaam in
+##wizard.basicsetup.lanonly=LAN only
 wizard.basicsetup.networking=Netwerk Mode
 wizard.basicsetup.private=Prive/Gesloten groep
 wizard.basicsetup.public=Publiek Netwerk
