--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -106,8 +106,10 @@ dialog.connect.connecting=In connessione
 dialog.connect.connecting_to=In connessione a {0}...
 dialog.connection_problem=Problemi di connessione
 dialog.synchronization.choose=Scegli la tua azione di sincronizzazione
+##dialog.synchronization.receive_changes=Receive changes
 dialog.synchronization.send_and_receive_changes=Invia e ricevi i cambiamenti 
 dialog.synchronization.send_own_changes=Invia i tuoi cambiamenti
+##dialog.synchronization.sychronizing=Synchronizing...
 dialog.synchronization.title=Sincronizzazione Progetto
 dialog.unable_to_connect_to_address=Impossibile connettersi a {0}
 dialog.unable_to_connect_to_member=Impossibile connettersi a {0}
@@ -190,6 +192,10 @@ filelist.recursive=recursive
 ##filelist.status.no_files_available_add_files_in_folder=No files available... Add files in you local folder to share them
 ##filelist.status.no_files_available_yet_fetching_filelist=No files available yet... fetching filelist
 
+##findfriends.description=Start searching for new friends
+##findfriends.key=F
+##findfriends.name=Find new Friends
+
 ##folder.check_path_length.never_show_again=Do not ask this again
 ##folder.check_path_length.text=The combined length of the path to the file and the filename is more than 255 characters.\nThis is not recommended since this may not work on other Operating systems like Windows 2000.\n\nFolder\: {0}\nFile\: {1}
 ##folder.check_path_length.title=Path maybe to long
@@ -214,6 +220,7 @@ foldercreate.key=s
 foldercreate.name=Condividi una cartella
 foldercreate.nameempty.text=Il nome della cartella non deve essere vuoto
 foldercreate.nameempty.title=Nome della cartella richiesto
+##foldercreate.progress.text=Creating Folder '{0}'
 foldercreate.success=Cartella {0} condivisa, copia in locale a '{1}'
 
 folderexception.dialog.text=Impossibile accedere alla cartella '{0}'.\nMotivo\: {1}
@@ -256,6 +263,7 @@ folderpanel.hometab.number_of_deleted_files_in_folder=Numero di file cancellati 
 folderpanel.hometab.number_of_local_files_in_folder=Numero di file locali nella cartella
 folderpanel.hometab.public_folder=Pubblico
 folderpanel.hometab.secret_folder=Segreta
+##folderpanel.hometab.synchronisation_eta=Synchronisation ETA
 folderpanel.hometab.synchronisation_percentage=Percentuale di sincronizzazione
 folderpanel.hometab.title=Home
 folderpanel.hometab.total_number_of_files=Numero totale di file (locali+cancellati+disponibili)
@@ -273,6 +281,7 @@ friendsearch.nodetable.last_seen_online=Ultima volta online
 friendsearch.nodetable.name=Nome
 friendsearch.nodetable.on_local_network=In una LAN
 
+##friendspanel.connected=Connected
 ##friendspanel.currently_online=Currently online
 friendspanel.n_a=n/a
 friendspanel.search_for_user=Ricerca per utente
@@ -293,6 +302,7 @@ general.folder=Cartella
 general.folder.public=Pubblica (visibile a tutti)
 general.folder.secret=Privata (richiede invito)
 general.foldername=Nome
+##general.friendlist=Friendlist
 ##general.from=from
 general.hide=nascondi
 general.inet=i-rete
@@ -443,10 +453,22 @@ openfile.description=Apri (Esegui) il file selezionato
 openfile.key=O
 openfile.name=Apri il file
 
+##plugin_disable.description=Disable (and stop) Plugin
+##plugin_disable.key=D
+##plugin_disable.name=Disable
+
+##plugin_enable.description=Enable (and start) Plugin
+##plugin_enable.key=E
+##plugin_enable.name=Enable
+
+##pluginsettings.description=Open the settings for this plugin
+##pluginsettings.key=S
+##pluginsettings.name=Settings
+
 preferences.description=Apri le preferenze
 ##preferences.dialog.advPort=Port
 ##preferences.dialog.advPort.tooltip=Enter a ","-separated list of ports PowerFolder should listen for connections
-##preferences.dialog.advancedSettingsTabbedPane=Advanced Settings
+##preferences.dialog.advanced.title=Advanced
 preferences.dialog.autostartleechfiles=Autostart P2P esterno
 preferences.dialog.basedir=Directory base per le cartelle
 preferences.dialog.basedir.title=Scegli la cartella base di default
@@ -456,11 +478,16 @@ preferences.dialog.basedir.title=Scegli la cartella base di default
 ##preferences.dialog.bindDescr=Interface description
 preferences.dialog.colortheme=Tema da utilizzare
 preferences.dialog.createdesktopshortcuts=Crea un collegamento sul desktop
+##preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to friends if a node becomes a member of a folder
+##preferences.dialog.dialogs.title=Dialogs
+##preferences.dialog.dialogs.warnoncloseifnotinsync=Warn on close of program if a folder is still synchronizing
+##preferences.dialog.dialogs.warnonlimitedconnectivity=Warn on limited connectivity (No incomming connections)
+##preferences.dialog.dialogs.warnonpossiblefilenameproblems=Warn on possible filename problems (e.g. too long for Apple classic)
 preferences.dialog.dyndns=Mio DNS (dinamico)
 preferences.dialog.dyndns.link=http\://www.dyndns.org/services/dns/dyndns
+##preferences.dialog.dyndns.title=DynDNS
 ##preferences.dialog.dyndnsCurrentIP=Current IP
 ##preferences.dialog.dyndnsHostname=Hostname
-##preferences.dialog.dyndnsInfoTabbedPane=DynDns Info
 ##preferences.dialog.dyndnsLoginPanel=Login
 ##preferences.dialog.dyndnsPassword=Password
 ##preferences.dialog.dyndnsSettingsTabbedPane=DynDns Settings
@@ -472,24 +499,45 @@ preferences.dialog.dyndns.link=http\://www.dyndns.org/services/dns/dyndns
 ##preferences.dialog.dyndnsUpdateWarning=DynDns service returned a warning\: 
 ##preferences.dialog.dyndnsUpdatedIP=Updated DynDns IP
 ##preferences.dialog.dyndnsUserName=Username
+##preferences.dialog.dyndnsmanager.nomatch.text=The entered DynDns does not match to this host.\nAre you sure you want to continue with it?
+##preferences.dialog.dyndnsmanager.nomatch.title=The entered DynDns does not match to this host. 
 ##preferences.dialog.errorExpandButton=>>
 ##preferences.dialog.errorShrinkButton=<<
-##preferences.dialog.generalTabbedPane=General Settings
+##preferences.dialog.general.title=General
 preferences.dialog.language=Linguaggio
 ##preferences.dialog.lanlinesettings=LAN Connection speed
-##preferences.dialog.linesettings=Inet Connection speed
+##preferences.dialog.linesettings=Internet Connection speed
+##preferences.dialog.network.title=Network
+##preferences.dialog.networkmode.lanonly=LAN only
+##preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
+##preferences.dialog.networkmode.private=Private Networking   
+##preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Disables public folder sharing. Restricts connectivity to interesting users only.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to some other users so so the finding of your friends in the network is posible.</BODY></HTML>
+##preferences.dialog.networkmode.public=Public Networking
+##preferences.dialog.networkmode.public.tooltip=<HTML><BODY>Enables public Folder sharing.<BR>Private folders will always require an Invitation, regardless of the networking mode.</BODY></HTML>
 preferences.dialog.nickname=Nome utente
 preferences.dialog.nonwindowsinfo=Attenzione\: alcune impostazioni non sono disponibili su sistemi Windows
-preferences.dialog.privatenetworking=Rete privata
-preferences.dialog.privatenetworking.tooltip=Restringi la connettivit\u00E0 a determinati utenti.\nAttualmente solo gli amici, gli utenti sulla LAN\ne gli utenti i quali hanno ottenuto l'accesso a cartelle
+##preferences.dialog.plugin.classname=Java classname
+##preferences.dialog.plugin.description=Description
+##preferences.dialog.plugin.name=Name
+##preferences.dialog.plugin.status=Status
+##preferences.dialog.plugin.status_disabled=Disabled
+##preferences.dialog.plugin.status_enabled=Enabled
+##preferences.dialog.plugin.title=Plugin
 preferences.dialog.restarttext=Alcune modifiche richiedono un riavvio del programma.\nVuoi riavviare PowerFolder ?\n 
 preferences.dialog.restarttitle=Richiesto riavvio
+##preferences.dialog.showadvanged=Show Advanged Preferences
+##preferences.dialog.showpreviewpanel=Enable internal image preview
+##preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My Folders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
+##preferences.dialog.silentthrottle=Silentmode bandwidth throttle 
+##preferences.dialog.silentthrottle.tooltip=Set the bandwidth usage throttle in silent mode (only works for limits other than 0)
 preferences.dialog.statusCantResolve=DynDns {0}\: cannot be resolved\!
 preferences.dialog.statusDynDnsSuccess=DynDns {0} validazione ottenuta\!
 preferences.dialog.statusValidFailed=DynDns {0}\: validazione fallita\!
 preferences.dialog.statusWaitDynDns=Attendi un attimo, DynDns {0} is beaing validated\!
 preferences.dialog.title=Preferenze
 ##preferences.dialog.titleProcessing=processing...
+##preferences.dialog.useziponlan=Use ZIP Compression on LAN 
+##preferences.dialog.useziponlan.tooltip=Enable if files to transfer are easy to compress (this may effect your CPU load)
 ##preferences.dialog.warnningMessage=Warning
 preferences.dialog.xbehavior=Comportamento d'uscita
 preferences.dialog.xbehavior.exit=Esci dal programma
@@ -581,7 +629,7 @@ searchfriends.name=Ricerca
 
 ##sendinvitation.ask_emailaddres.message=Email address to send invitation to
 ##sendinvitation.ask_emailaddres.title=Email address
-##sendinvitation.body=Hello {0},<br><br>{1} invites you to the PowerFolder '{2}'<br>With this invitation you get access to the files contained.<br><br>Guide\:<br>1) To access the files you need to download and install the free software <b>PowerFolder</b> from <b><a href\="http\://www.powerfolder.com">http\://www.powerfolder.com</a></b>.<br><br>2) After you installed <b>PowerFolder</b> just double-click the invitation file attached.<br><br>More Documentation\:<br><a href\="http\://docs.powerfolder.com">http\://docs.powerfolder.com</a><br><br>Best regards,<br>{1}
+##sendinvitation.body=Hello {0},<br><br>{1} invites you to the PowerFolder '{2}'<br>This invitation is used to access a private folder hosted by {1}.<br><br>1) To access the files you first need to download and install the free<br>software PowerFolder from<br>http\://www.powerfolder.com.<br><br>2) After you have installed PowerFolder double-click the invitation<br>file attached to this email.<br><br>For more information or help installing or using PowerFolder please<br>visit our Documentation Resources at http\://docs.powerfolder.com<br><br>Thank You,<br>The PowerFolder Development Team<br>PowerFolder, Professional Folder Sharing<br>
 sendinvitation.description=Invita un utente ad utilizzare una cartella
 ##sendinvitation.email=To email...
 ##sendinvitation.example_emailaddress=email@domain.com
@@ -642,6 +690,7 @@ systray.show=Mostra
 ##systray.tooltip.syncing=Syncing
 ##systray.tooltip.up=UP {0} KBs
 
+##title.friends=Friends
 title.my.folders=Mie cartelle
 title.network.statistics=Statistiche Network
 title.public.folder=Cartella pubblica
@@ -669,6 +718,7 @@ transfers.to=A
 ##webservice_request_folder_leave.name=Quit WebStore
 
 ##wizard.basicsetup.enternick=Please enter your nickname
+##wizard.basicsetup.lanonly=LAN only
 ##wizard.basicsetup.networking=Networking Mode
 ##wizard.basicsetup.private=Private/Closed Group
 ##wizard.basicsetup.public=Public Networking
