--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -106,8 +106,10 @@ dialog.connect.connecting=\u63A5\u7D9A\u8A66\u884C\u4E2D
 dialog.connect.connecting_to={0} \u306B\u63A5\u7D9A\u3092\u8A66\u307F\u3066\u3044\u307E\u3059...
 dialog.connection_problem=\u63A5\u7D9A\u306B\u554F\u984C
 dialog.synchronization.choose=\u540C\u671F\u52D5\u4F5C\u306E\u9078\u629E \u30D7\u30ED\u30B8\u30A7\u30AF\u30C8\uFF1A
+##dialog.synchronization.receive_changes=Receive changes
 dialog.synchronization.send_and_receive_changes=\u5909\u66F4\u306E\u9001\u4FE1\u304A\u3088\u3073\u53D7\u4FE1
 dialog.synchronization.send_own_changes=\u3053\u3061\u3089\u5074\u306E\u5909\u66F4\u306E\u9001\u4FE1
+##dialog.synchronization.sychronizing=Synchronizing...
 dialog.synchronization.title=\u30D7\u30ED\u30B8\u30A7\u30AF\u30C8\u306E\u540C\u671F
 dialog.unable_to_connect_to_address={0} \u306B\u63A5\u7D9A\u3067\u304D\u307E\u305B\u3093\u3002
 dialog.unable_to_connect_to_member={0} \u306B\u63A5\u7D9A\u3067\u304D\u307E\u305B\u3093\u3002
@@ -190,6 +192,10 @@ filelist.recursive=\u975E\u968E\u5C64\u8868\u793A
 ##filelist.status.no_files_available_add_files_in_folder=No files available... Add files in you local folder to share them
 ##filelist.status.no_files_available_yet_fetching_filelist=No files available yet... fetching filelist
 
+##findfriends.description=Start searching for new friends
+##findfriends.key=F
+##findfriends.name=Find new Friends
+
 folder.check_path_length.never_show_again=\u4ECA\u5F8C\u3053\u306E\u8868\u793A\u306F\u3057\u306A\u3044
 folder.check_path_length.text=\u30D5\u30A1\u30A4\u30EB\u540D\u3092\u542B\u3093\u3060\u30D1\u30B9\u306E\u6587\u5B57\u6570\u304C 255 \u6587\u5B57\u3092\u8D85\u3048\u3066\u3044\u307E\u3059\u3002\n\u3053\u308C\u306F Windows 2000 \u306E\u3088\u3046\u306A\u4ED6\u30AA\u30DA\u30EC\u30FC\u30B7\u30E7\u30F3\u30B7\u30B9\u30C6\u30E0\u3067\u306F\u6271\u3048\u306A\u3044\u53EF\u80FD\u6027\u304C\u3042\u308B\u305F\u3081\u85A6\u3081\u3089\u308C\u307E\u305B\u3093\u3002\n\n\u30D5\u30A9\u30EB\u30C0\: {0}\n\u30D5\u30A1\u30A4\u30EB\: {1}
 folder.check_path_length.title=\u30D1\u30B9\u304C\u9577\u3059\u304E\u308B\u53EF\u80FD\u6027
@@ -214,6 +220,7 @@ foldercreate.key=S
 foldercreate.name=\u30D5\u30A9\u30EB\u30C0\u5171\u6709(S)
 foldercreate.nameempty.text=\u30D5\u30A9\u30EB\u30C0\u306E\u540D\u524D\u3092\u7A7A\u767D\u306B\u3057\u3066\u304A\u304F\u3053\u3068\u306F\u3067\u304D\u307E\u305B\u3093\u3002
 foldercreate.nameempty.title=\u30D5\u30A9\u30EB\u30C0\u540D\u304C\u5FC5\u8981
+##foldercreate.progress.text=Creating Folder '{0}'
 foldercreate.success=\u30D5\u30A9\u30EB\u30C0 {0} \u5171\u6709\u3001\u30ED\u30FC\u30AB\u30EB\u3067\u306E\u5834\u6240 '{1}'
 
 folderexception.dialog.text='{0}' \u30D5\u30A9\u30EB\u30C0\u3078\u306E\u53C2\u52A0\u306F\u3067\u304D\u307E\u305B\u3093\u3002\n\u7406\u7531\: {1}
@@ -256,6 +263,7 @@ folderpanel.hometab.number_of_deleted_files_in_folder=\u30D5\u30A9\u30EB\u30C0\u
 folderpanel.hometab.number_of_local_files_in_folder=\u30D5\u30A9\u30EB\u30C0\u5185\u306E\u30ED\u30FC\u30AB\u30EB\u30D5\u30A1\u30A4\u30EB\u6570
 folderpanel.hometab.public_folder=\u30D1\u30D6\u30EA\u30C3\u30AF
 folderpanel.hometab.secret_folder=\u30B7\u30FC\u30AF\u30EC\u30C3\u30C8
+##folderpanel.hometab.synchronisation_eta=Synchronisation ETA
 folderpanel.hometab.synchronisation_percentage=\u540C\u671F\u5272\u5408
 folderpanel.hometab.title=\u30DB\u30FC\u30E0
 folderpanel.hometab.total_number_of_files=\u5408\u8A08\u30D5\u30A1\u30A4\u30EB\u6570\uFF08\u30ED\u30FC\u30AB\u30EB\uFF0B\u524A\u9664\u6E08\uFF0B\u53D6\u5F97\u53EF\uFF09
@@ -273,6 +281,7 @@ friendsearch.nodetable.last_seen_online=\u6700\u7D42\u30AA\u30F3\u30E9\u30A4\u30
 friendsearch.nodetable.name=\u540D\u524D
 friendsearch.nodetable.on_local_network=LAN \u4E0A
 
+##friendspanel.connected=Connected
 friendspanel.currently_online=\u73FE\u5728\u30AA\u30F3\u30E9\u30A4\u30F3
 friendspanel.n_a=n/a
 friendspanel.search_for_user=\u30E6\u30FC\u30B6\u30FC\u691C\u7D22
@@ -293,6 +302,7 @@ general.folder=\u30D5\u30A9\u30EB\u30C0
 general.folder.public=\u30D1\u30D6\u30EA\u30C3\u30AF\uFF08\u5168\u54E1\u306B\u516C\u958B\uFF09
 general.folder.secret=\u30D7\u30E9\u30A4\u30D9\u30FC\u30C8\uFF08\u8981\u62DB\u5F85\uFF09
 general.foldername=\u540D\u524D
+##general.friendlist=Friendlist
 general.from=from
 general.hide=\u96A0\u3059
 general.inet=i-net
@@ -443,10 +453,22 @@ openfile.description=\u9078\u629E\u30D5\u30A1\u30A4\u30EB\u306E\u5B9F\u884C
 openfile.key=O
 openfile.name=\u30D5\u30A1\u30A4\u30EB\u3092\u958B\u304F(O)
 
+##plugin_disable.description=Disable (and stop) Plugin
+##plugin_disable.key=D
+##plugin_disable.name=Disable
+
+##plugin_enable.description=Enable (and start) Plugin
+##plugin_enable.key=E
+##plugin_enable.name=Enable
+
+##pluginsettings.description=Open the settings for this plugin
+##pluginsettings.key=S
+##pluginsettings.name=Settings
+
 preferences.description=\u8A2D\u5B9A\u753B\u9762\u3092\u958B\u304F
 preferences.dialog.advPort=\u30DD\u30FC\u30C8
 preferences.dialog.advPort.tooltip=PowerFolder \u304C\u4F7F\u7528\u3059\u308B\u63A5\u7D9A\u5F85\u3061\u53D7\u3051\u30DD\u30FC\u30C8\u3092\u8907\u6570\u6307\u5B9A\u3059\u308B\u5834\u5408\u306F\u3001"," \u3067\u533A\u5207\u3063\u3066\u304F\u3060\u3055\u3044
-preferences.dialog.advancedSettingsTabbedPane=\u8A73\u7D30\u8A2D\u5B9A
+##preferences.dialog.advanced.title=Advanced
 preferences.dialog.autostartleechfiles=\u5916\u90E8 P2P \u306E\u81EA\u52D5\u30B9\u30BF\u30FC\u30C8
 preferences.dialog.basedir=\u53C2\u52A0\u30D5\u30A9\u30EB\u30C0\u7528\u306E\u57FA\u672C\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA
 preferences.dialog.basedir.title=\u30C7\u30D5\u30A9\u30EB\u30C8\u306E\u57FA\u672C\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u306E\u9078\u629E
@@ -456,11 +478,16 @@ preferences.dialog.basedir.title=\u30C7\u30D5\u30A9\u30EB\u30C8\u306E\u57FA\u672
 ##preferences.dialog.bindDescr=Interface description
 preferences.dialog.colortheme=\u914D\u8272\u30C6\u30FC\u30DE
 preferences.dialog.createdesktopshortcuts=\u30C7\u30B9\u30AF\u30C8\u30C3\u30D7\u30B7\u30E7\u30FC\u30C8\u30AB\u30C3\u30C8\u306E\u4F5C\u6210
+##preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to friends if a node becomes a member of a folder
+##preferences.dialog.dialogs.title=Dialogs
+##preferences.dialog.dialogs.warnoncloseifnotinsync=Warn on close of program if a folder is still synchronizing
+##preferences.dialog.dialogs.warnonlimitedconnectivity=Warn on limited connectivity (No incomming connections)
+##preferences.dialog.dialogs.warnonpossiblefilenameproblems=Warn on possible filename problems (e.g. too long for Apple classic)
 preferences.dialog.dyndns=\u81EA\u5206\u306E\uFF08\u52D5\u7684\uFF09DNS
 preferences.dialog.dyndns.link=http\://www.dyndns.org/services/dns/dyndns
+##preferences.dialog.dyndns.title=DynDNS
 preferences.dialog.dyndnsCurrentIP=\u73FE\u5728\u306E IP\:
 preferences.dialog.dyndnsHostname=\u30DB\u30B9\u30C8\u540D\:
-preferences.dialog.dyndnsInfoTabbedPane=DynDns \u60C5\u5831
 preferences.dialog.dyndnsLoginPanel=\u30ED\u30B0\u30A4\u30F3
 preferences.dialog.dyndnsPassword=\u30D1\u30B9\u30EF\u30FC\u30C9\:
 preferences.dialog.dyndnsSettingsTabbedPane=DynDns \u8A2D\u5B9A
@@ -472,24 +499,45 @@ preferences.dialog.dyndnsUpdateUnknowError=DynDns \u30B5\u30FC\u30D3\u30B9 \u304
 preferences.dialog.dyndnsUpdateWarning=DynDns \u30B5\u30FC\u30D3\u30B9 \u304B\u3089\u8B66\u544A\u5FDC\u7B54\:
 preferences.dialog.dyndnsUpdatedIP=\u66F4\u65B0 DynDns IP\:
 preferences.dialog.dyndnsUserName=\u30E6\u30FC\u30B6\u30FC\u540D\:
+##preferences.dialog.dyndnsmanager.nomatch.text=The entered DynDns does not match to this host.\nAre you sure you want to continue with it?
+##preferences.dialog.dyndnsmanager.nomatch.title=The entered DynDns does not match to this host. 
 preferences.dialog.errorExpandButton=>>
 preferences.dialog.errorShrinkButton=<<
-preferences.dialog.generalTabbedPane=\u5168\u822C\u306E\u8A2D\u5B9A
+##preferences.dialog.general.title=General
 preferences.dialog.language=\u8A00\u8A9E
 ##preferences.dialog.lanlinesettings=LAN Connection speed
-##preferences.dialog.linesettings=Inet Connection speed
+##preferences.dialog.linesettings=Internet Connection speed
+##preferences.dialog.network.title=Network
+##preferences.dialog.networkmode.lanonly=LAN only
+##preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
+##preferences.dialog.networkmode.private=Private Networking   
+##preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Disables public folder sharing. Restricts connectivity to interesting users only.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to some other users so so the finding of your friends in the network is posible.</BODY></HTML>
+##preferences.dialog.networkmode.public=Public Networking
+##preferences.dialog.networkmode.public.tooltip=<HTML><BODY>Enables public Folder sharing.<BR>Private folders will always require an Invitation, regardless of the networking mode.</BODY></HTML>
 preferences.dialog.nickname=\u30CB\u30C3\u30AF\u30CD\u30FC\u30E0
 preferences.dialog.nonwindowsinfo=\u6CE8\u610F\: Windows \u30B7\u30B9\u30C6\u30E0\u3067\u306E\u307F\u4F7F\u7528\u53EF\u80FD\u306A\u8A2D\u5B9A\u9805\u76EE\u304C\u3044\u304F\u3064\u304B\u3042\u308A\u307E\u3059\u3002
-preferences.dialog.privatenetworking=\u30D7\u30E9\u30A4\u30D9\u30FC\u30C8\u30CD\u30C3\u30C8\u30EF\u30FC\u30AF\u5F62\u6210
-preferences.dialog.privatenetworking.tooltip=\u7279\u5B9A\u306E\u30E6\u30FC\u30B6\u30FC\u306B\u306E\u307F\u63A5\u7D9A\u3059\u308B\u3088\u3046\u5236\u9650\u3001\u53CB\u4EBA\u3084 LAN\u5185\u306E\u30E6\u30FC\u30B6\u30FC\u3001\u30D5\u30A9\u30EB\u30C0\u306B\u53C2\u52A0\u3057\u3066\u3044\u308B\u4EBA\u306B\u306E\u307F\u63A5\u7D9A
+##preferences.dialog.plugin.classname=Java classname
+##preferences.dialog.plugin.description=Description
+##preferences.dialog.plugin.name=Name
+##preferences.dialog.plugin.status=Status
+##preferences.dialog.plugin.status_disabled=Disabled
+##preferences.dialog.plugin.status_enabled=Enabled
+##preferences.dialog.plugin.title=Plugin
 preferences.dialog.restarttext=\u3044\u304F\u3064\u304B\u306E\u8A2D\u5B9A\u9805\u76EE\u306F\u3001\u5909\u66F4\u306E\u9069\u7528\u306B PowerFolder \u306E\u518D\u8D77\u52D5\u304C\u5FC5\u8981\u3067\u3059\u3002\n\u76F4\u3061\u306B\u518D\u8D77\u52D5\u3057\u307E\u3059\u304B\uFF1F\n
 preferences.dialog.restarttitle=\u518D\u8D77\u52D5\u8981\u6C42
+##preferences.dialog.showadvanged=Show Advanged Preferences
+##preferences.dialog.showpreviewpanel=Enable internal image preview
+##preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My Folders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
+##preferences.dialog.silentthrottle=Silentmode bandwidth throttle 
+##preferences.dialog.silentthrottle.tooltip=Set the bandwidth usage throttle in silent mode (only works for limits other than 0)
 preferences.dialog.statusCantResolve=DynDns {0}\: \u540D\u524D\u89E3\u6C7A\u304C\u3067\u304D\u307E\u305B\u3093\uFF01
 preferences.dialog.statusDynDnsSuccess=DynDns {0} \u306E\u6709\u52B9\u3092\u78BA\u8A8D\u3057\u307E\u3057\u305F\uFF01
 preferences.dialog.statusValidFailed=DynDns {0}\: \u6709\u52B9\u78BA\u8A8D\u306B\u5931\u6557\uFF01
 preferences.dialog.statusWaitDynDns=\u5C11\u3005\u304A\u5F85\u3061\u304F\u3060\u3055\u3044\u3002DynDns {0} \u304C\u6709\u52B9\u304B\u78BA\u8A8D\u3057\u3066\u3044\u307E\u3059\uFF01
 preferences.dialog.title=\u8A2D\u5B9A
 preferences.dialog.titleProcessing=\u51E6\u7406\u4E2D...
+##preferences.dialog.useziponlan=Use ZIP Compression on LAN 
+##preferences.dialog.useziponlan.tooltip=Enable if files to transfer are easy to compress (this may effect your CPU load)
 preferences.dialog.warnningMessage=\u8B66\u544A
 preferences.dialog.xbehavior=[\u9589\u3058\u308B]\u30DC\u30BF\u30F3\u3092\u62BC\u3057\u305F\u6642\u306E\u52D5\u4F5C
 preferences.dialog.xbehavior.exit=\u30D7\u30ED\u30B0\u30E9\u30E0\u3092\u7D42\u4E86
@@ -581,7 +629,7 @@ searchfriends.name=\u691C\u7D22(S)
 
 ##sendinvitation.ask_emailaddres.message=Email address to send invitation to
 ##sendinvitation.ask_emailaddres.title=Email address
-##sendinvitation.body=Hello {0},<br><br>{1} invites you to the PowerFolder '{2}'<br>With this invitation you get access to the files contained.<br><br>Guide\:<br>1) To access the files you need to download and install the free software <b>PowerFolder</b> from <b><a href\="http\://www.powerfolder.com">http\://www.powerfolder.com</a></b>.<br><br>2) After you installed <b>PowerFolder</b> just double-click the invitation file attached.<br><br>More Documentation\:<br><a href\="http\://docs.powerfolder.com">http\://docs.powerfolder.com</a><br><br>Best regards,<br>{1}
+##sendinvitation.body=Hello {0},<br><br>{1} invites you to the PowerFolder '{2}'<br>This invitation is used to access a private folder hosted by {1}.<br><br>1) To access the files you first need to download and install the free<br>software PowerFolder from<br>http\://www.powerfolder.com.<br><br>2) After you have installed PowerFolder double-click the invitation<br>file attached to this email.<br><br>For more information or help installing or using PowerFolder please<br>visit our Documentation Resources at http\://docs.powerfolder.com<br><br>Thank You,<br>The PowerFolder Development Team<br>PowerFolder, Professional Folder Sharing<br>
 sendinvitation.description=\u30E6\u30FC\u30B6\u30FC\u3092\u30D5\u30A9\u30EB\u30C0\u306B\u62DB\u5F85
 ##sendinvitation.email=To email...
 ##sendinvitation.example_emailaddress=email@domain.com
@@ -642,6 +690,7 @@ systray.syncall=\u30D5\u30A9\u30EB\u30C0\u540C\u671F
 ##systray.tooltip.syncing=Syncing
 ##systray.tooltip.up=UP {0} KBs
 
+##title.friends=Friends
 title.my.folders=\u30DE\u30A4 \u30D5\u30A9\u30EB\u30C0
 title.network.statistics=\u30CD\u30C3\u30C8\u30EF\u30FC\u30AF\u306E\u7D71\u8A08
 title.public.folder=\u30D1\u30D6\u30EA\u30C3\u30AF \u30D5\u30A9\u30EB\u30C0
@@ -669,6 +718,7 @@ webservice_request_folder_leave.key=q
 webservice_request_folder_leave.name=Quit WebStore
 
 wizard.basicsetup.enternick=\u30CB\u30C3\u30AF\u30CD\u30FC\u30E0\u3092\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044
+##wizard.basicsetup.lanonly=LAN only
 wizard.basicsetup.networking=\u30CD\u30C3\u30C8\u30EF\u30FC\u30AF\u5F62\u6210\u5F62\u614B
 wizard.basicsetup.private=\u30D7\u30E9\u30A4\u30D9\u30FC\u30C8\uFF0F\u4EF2\u9593\u5185 \u30B0\u30EB\u30FC\u30D7
 wizard.basicsetup.public=\u30D1\u30D6\u30EA\u30C3\u30AF\u30CD\u30C3\u30C8\u30EF\u30FC\u30AF
