fixed some keys

--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -52,7 +52,7 @@ about.dialog.yoursystem.screen=Schermo\: {0}x{1}
 about.dialog.yoursystem.title=Il tuo sistema
 about.dialog_about_tab=about
 about.dialog_contributers_tab=team
-about.key=h
+about.key=A
 about.name=Aiuto
 
 addfriend.description=Aggiungi un utente agli amici
@@ -90,7 +90,7 @@ delete_confimation.text_movetorecyclebin_directory=Sei sicuro di voler mettere i
 delete_confimation.title=Elimina file?
 
 deletefile.description=Cancella il file selezionato/i
-deletefile.key=F
+deletefile.key=C
 deletefile.name=Cancella File(s)
 
 dialog.addmembertofriendlist.button.no=No
@@ -130,7 +130,7 @@ directorypanel.dropfile_duplicate_dialog.text=Questa cartella contiene gi\u00e0 
 directorypanel.dropfile_duplicate_dialog.title=Il file esiste
 
 disablesilentmode.description=Siletmode \u00e8 attualmente attivo, file modificati/aggiunti non saranno trovati. Premi per tornare in modalit\u00e0 completa.
-disablesilentmode.key=w
+disablesilentmode.key=S
 disablesilentmode.name=Sveglia\!
 
 donotdownloadfile.description=Contrassegna questo file come "non scaricare nei profili di sincronizzazione auto-download"
@@ -193,7 +193,7 @@ filelist.status.no_files_available_add_files_in_folder=Nessun file disponibile..
 filelist.status.no_files_available_yet_fetching_filelist=Nessun file ancora disponibile... recupero la lista dei file
 
 findfriends.description=Inizia ricerca di nuovi amici
-findfriends.key=T
+findfriends.key=n
 findfriends.name=Trova nuovi amici
 
 folder.check_path_length.never_show_again=Non chiederlo piu'
@@ -216,7 +216,7 @@ foldercreate.error.already_taken=La directory di base \u00e8 gi\u00e0 stata pres
 foldercreate.error.it_is_base_dir=Impossibile arprire la cartella nella directory '{0}'. E' la directory base di PowerFolder per tutte le cartelle\!
 foldercreate.error.unable_to_create=Impossibile creare la directory '{0}'
 foldercreate.error.unable_to_open=Impossibile aprire la directory locale '{0}'. Sembra essere un file \!
-foldercreate.key=s
+foldercreate.key=C
 foldercreate.name=Condividi una cartella
 foldercreate.nameempty.text=Il nome della cartella non deve essere vuoto
 foldercreate.nameempty.title=Nome della cartella richiesto
@@ -244,7 +244,7 @@ folderjoin.warning.notempty.title=La directory base locale non \u00e8 vuota
 
 folderjoinleave.description=Raggiunge o lascia la cartella
 folderjoinleave.join=Raggiunge la cartella
-folderjoinleave.key=f
+folderjoinleave.key=L
 folderjoinleave.leave=Lascia la cartella
 folderjoinleave.name=Raggiungi la cartella
 
@@ -366,7 +366,7 @@ linespeed.unlimited=Upload illimitato
 linespeed.uploadspeed=Limite di Upload
 
 linktoclipboard.description=Copia un link PowerFolder negli appunti, usalo per abilitare altri utenti ad entrare nella cartella e scaricare questo file
-linktoclipboard.key=c
+linktoclipboard.key=l
 linktoclipboard.name=Copia un link PowerFolder negli appunti
 
 loadinvitation.title=Accedi ad una cartella da un file di invito
@@ -450,7 +450,7 @@ openchat.key=c
 openchat.name=Chat
 
 openfile.description=Apri (Esegui) il file selezionato
-openfile.key=O
+openfile.key=f
 openfile.name=Apri il file
 
 plugin_disable.description=Disabilita (e ferma) Plugin
@@ -458,11 +458,11 @@ plugin_disable.key=D
 plugin_disable.name=Disabilita
 
 plugin_enable.description=Abilita (e avvia) Plugin
-plugin_enable.key=E
+plugin_enable.key=A
 plugin_enable.name=Abilita
 
 pluginsettings.description=Apri le impostazioni per questo plugin
-pluginsettings.key=S
+pluginsettings.key=I
 pluginsettings.name=Impostazioni
 
 preferences.description=Apri le preferenze
@@ -546,7 +546,7 @@ preferences.key=p
 preferences.name=Preferenze
 
 previewfiles.description=Anteprima dei file di questa cartella
-previewfiles.key=P
+previewfiles.key=p
 previewfiles.name=Anteprima
 
 publicfolders.filter.show_empty_folders=Mostra le cartelle vuote
@@ -586,14 +586,14 @@ reconnect.key=r
 reconnect.name=Riconnetti
 
 remove_from_recycle_bin.description=Cancella il file dal cestino di PowerFolder 
-remove_from_recycle_bin.key=D
+remove_from_recycle_bin.key=C
 remove_from_recycle_bin.name=Cancella File
 
 remove_from_recycle_bin_confimation.text=Sei sicuro di voler cancellare i seguenti file(s)?
 remove_from_recycle_bin_confimation.title=Cancella files?
 
 removefriend.description=Togli utente dalla lista
-removefriend.key=r
+removefriend.key=T
 removefriend.name=Togli utente dalla lista
 
 removemodifierfriend.description=Removes the file modifier from friendlist
@@ -605,11 +605,11 @@ requestfilelist.key=f
 requestfilelist.name=Richiedi una nuova lista dei file
 
 requestnetfolderlist.description=Aggiorna la lista delle cartelle pubbliche
-requestnetfolderlist.key=r
+requestnetfolderlist.key=A
 requestnetfolderlist.name=Aggiorna la lista
 
 restorefile.description=Ripristina file
-restorefile.key=r
+restorefile.key=R
 restorefile.name=Ripristina file
 
 rootpanel.connected_users=Utenti connessi
@@ -624,7 +624,7 @@ scanfolder.key=s
 scanfolder.name=Sincronizza ora
 
 searchfriends.description=Ricerca un amico
-searchfriends.key=S
+searchfriends.key=R
 searchfriends.name=Ricerca
 
 sendinvitation.ask_emailaddres.message=Indirizzo Email cui mandare un invito
@@ -635,7 +635,7 @@ sendinvitation.email=All' email...
 sendinvitation.example_emailaddress=email@domain.com
 sendinvitation.folder.text=Invia un invito a
 sendinvitation.folder.title=Invia un invito
-sendinvitation.key=i
+sendinvitation.key=I
 sendinvitation.name=Invia un invito
 sendinvitation.placetostore=Scegli un posto dove memorizzare l'invito
 sendinvitation.subject=Invito a PowerFolder '{0}'
@@ -647,11 +647,11 @@ sendinvitation.user.title=Invita {0} in una cartella
 setmasternode.description=Scegli l'utente amministratore per la tua lista di amici. La lista \u00e8 caricata dall'amministratore
 setmasternode.dialog.text=Scegli l'amministratore per la lista di amici
 setmasternode.dialog.title=Amministratore della lista degli amici
-setmasternode.key=a
-setmasternode.name=Scegli l'utente ADmin
+setmasternode.key=A
+setmasternode.name=Scegli l'utente Admin
 
 showfileinfo.description=Mostra informazioni riguardo il file selezionato
-showfileinfo.key=p
+showfileinfo.key=P
 showfileinfo.name=Propriet\u00e0 del file
 
 showhidefiledetails.description=Mostra/Nascondi informazioni dettagliate riguardo il file selezionato
@@ -661,7 +661,7 @@ showhidefiledetails.name=Dettagli
 splash.version=Versione {0}
 
 startdownloads.description=Apri il file selezionato
-startdownloads.key=s
+startdownloads.key=A
 startdownloads.name=Apri
 
 synchronisation.notice.title=Profilo si sincronizzazione {0} attivato
@@ -714,7 +714,7 @@ webservice_request_folder_join.key=w
 webservice_request_folder_join.name=Richiedi WebStore
 
 webservice_request_folder_leave.description=Richiedi al servizioPowerFolder di lasciare questa cartella
-webservice_request_folder_leave.key=q
+webservice_request_folder_leave.key=w
 webservice_request_folder_leave.name=Interrompi WebStore
 
 wizard.basicsetup.enternick=Inserisci il tuo nickname
